# Luma-AI

./: .gitignore  README.md  data_rahasia.html  pyproject.toml  requirements.txt  ui1
backend/: __init__.py  main.py
backend/api/: routes_dataset.py  routes_demo.py  routes_evaluation.py  routes_features.py  routes_training.py
backend/schemas/: dataset.py  demo.py  evaluation.py  training.py
backend/services/: __init__.py  dataset_service.py  demo_service.py  evaluation_service.py  feature_service.py  job_service.py  training_service.py
config/: default.yaml
data/: features_s51_s56_pos.csv  features_s51_s56_pos_multiclass.csv  manifest_example.csv  ubfc_phys_manifest_s51_s56.csv
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  index.css
results/: evaluation_s51_s56_model_check.json  feature_importance_s51_s56.csv  feature_importance_s51_s56_multiclass_physiology_only.csv  feature_importance_s51_s56_physiology_only.csv  loso_metrics_s51_s56.json  loso_metrics_s51_s56_multiclass_physiology_only.json  loso_metrics_s51_s56_physiology_only.json  train_metrics_s51_s56.json  train_metrics_s51_s56_multiclass_physiology_only.json  train_metrics_s51_s56_physiology_only.json
scratch/: check_importances.py  inspect_features_csv.py  inspect_model_features.py  inspect_phys_only_model.py
scripts/: 00_make_manifest.py  01_extract_features.py  02_train_stress_classifier.py  03_realtime_demo.py  04_evaluate_model.py  list_cameras.py
tests/: test_dataset.py  test_ml.py  test_roi.py  test_rppg_algorithms.py  test_signal_processing.py
(+26 files in other folders)
