[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rppg-stress"
version = "0.1.0"
description = "Remote PPG based physiological stress estimation from face video"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "opencv-python>=4.8",
    "mediapipe>=0.10",
    "matplotlib>=3.7",
    "joblib>=1.3",
    "tqdm>=4.66",
    "PyYAML>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
